<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id='@+id/item1'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item1"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item2'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item2"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item3'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item3"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item4'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item4"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item5'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item5"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item6'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item6"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item7'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item7"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item8'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item8"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item9'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item9"
        android:layout_weight="1"/>
    <TextView
        android:id='@+id/item10'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item10"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="launchItems"
        android:text="@string/add"/>

</LinearLayout>