<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Items">
    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn1"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn2"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn3"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn4"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn5"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn6"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn7"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn8"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn9"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn10"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn11"
        android:onClick="launchMainActivity"
        android:layout_weight="1"/>

</LinearLayout>